# whisper-aligner

./: .gitmodules  Cargo.toml  README.md  flake.nix
nix/: default.nix
src/: align.rs  main.rs  silero.rs  whisper.rs
src/cli/: align.rs  mod.rs  transcribe.rs
src/ff/: mod.rs  transcode.rs  util.rs
whisper-cpp-sys/: Cargo.toml  build.rs  build.sh  generate_bindings.sh
whisper-cpp-sys/src/: lib.rs
