[package]
name = "whisper-aligner"
version = "0.1.0"
edition = "2021"

[features]
default = ["vibrato", "silero", "ort/load-dynamic"]
vibrato = ["dep:vibrato"]
silero = ["dep:ort", "dep:ndarray"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ffmpeg = { package = "ffmpeg-sys-next", version = "7" }
whisper-cpp-sys = { path = "./whisper-cpp-sys" }
vibrato = { version = "0.5", optional = true }
ort = { version = "1.16.3", optional = true, default-features = false }
# Should match ort's version
ndarray = { version = "0.15", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = [ "whisper-cpp-sys" ]

[profile.release]
lto = "thin"
